Final fixed modal on mobile.

--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@ span {
 }
 
 .highlighted {
-    box-shadow: 0 0 8px 5px purple;
+    box-shadow: 0 0 16px 8px #ff00fe;
     box-sizing: border-box;
 }
 
@@ -52,8 +52,8 @@ span {
 .bigHead {
     display: block;
     margin: 0 auto;
-    height: 25vh;
-    padding: 5vh 0;
+    height: 25%;
+    padding: 5% 0;
 }
 
 .details {
@@ -69,7 +69,7 @@ span {
 }
 
 .role {
-    margin-bottom: 5vh;
+    margin-bottom: 3vh;
 }
 
 .fact {
@@ -82,18 +82,27 @@ span {
     z-index: 1;
     left: 0;
     top: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
 
 .modalInner {
+    position: absolute;
+    top: 5%;
+    left: 15%;
     background-color: white;
-    width: 70vw;
-    height: 80vh;
-    margin: 5vh 15vw;
+    width: 70%;
+    height: 80%;
     font-size: 3vh;
+}
+
+@media only screen and (max-device-width: 900px) {
+    .modalInner {
+        font-size: 6vh;
+        height: 30%;
+    }
 }
 
 .visible {
